--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="#">Menu</a>
                 <a href="#">Directions</a>
                 <a href="#">Contacts</a>
+                <a href="#">Contacts</a>
             
         </nav>
        
